Added github link

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Output a random fact to your console",
   "main": "index.js",
   "scripts": {},
-  "author": "Ryan Potter <contact@ryanpotter.co.nz> (http://ryanpoter.co.nz/)",
+  "url": "https://github.com/Rhym/node-random-fact",
+  "author": "Ryan Potter <contact@ryanpotter.co.nz> (http://ryanpotter.co.nz/)",
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.3",
