--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "random-fact",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Output a random fact to your console",
   "main": "index.js",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "prettier": "prettier --write ."
+  },
   "repository": "Rhym/node-random-fact",
   "author": "Ryan Potter <contact@ryanpotter.co.nz> (http://ryanpotter.co.nz/)",
   "license": "MIT",
-  "dependencies": {
-    "boxen": "^0.8.1",
-    "chalk": "^1.1.3",
-    "lodash": "^4.15.0"
+  "bin": {
+    "get-fact": "./cli.js"
   },
-  "devDependencies": {}
+  "dependencies": {
+    "boxen": "^6.2.1",
+    "chalk": "^5.0.0",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "prettier": "2.5.1"
+  }
 }
